--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebRTC Join Room</title>
     <link rel="stylesheet" href="/style.css" />
-</head>
-<body>
-    <h1>Join a Room</h1>
-    
-    <div class="videos">
+  </head>
+  <body>
+    <div class="container">
+      <h1>Join a Room</h1>
+
+      <div class="videos">
         <h3>Local Stream</h3>
         <video id="webcamVideo" autoplay playsinline></video>
-        <video id="remoteVideo" autoplay playsinline></video>
-    </div>
+      </div>
 
-    <div class="controls">
-        <input id="callInput" placeholder="Enter Call ID" />
-        <button id="joinRoomButton">Join Room</button>
+      <div class="controls">
+        <input id="roomInput" type="text" placeholder="Enter Room ID" />
+        <button id="joinButton">Join Room</button>
         <button id="hangupButton" disabled>Hang Up</button>
+      </div>
     </div>
 
     <script type="module" src="/main.js"></script>
-</body>
+  </body>
 </html>
