--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       <div class="videos">
         <h3>Local Stream</h3>
         <video id="webcamVideo" autoplay playsinline></video>
+        <h3>Remote Stream</h3>
+        <video id="remoteVideo" autoplay playsinline></video> <!-- Add this line -->
       </div>
 
       <div class="controls">
