--- a/index.html
+++ b/index.html
@@ -4,27 +4,30 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebRTC Join Room</title>
-    <link rel="stylesheet" href="/style.css" />
+    <title>Join Call - WebRTC Demo</title>
   </head>
   <body>
-    <div class="container">
-      <h1>Join a Room</h1>
-
-      <div class="videos">
+    <h2>Join a Call</h2>
+    <div class="videos">
+      <span>
         <h3>Local Stream</h3>
         <video id="webcamVideo" autoplay playsinline></video>
+      </span>
+      <span>
         <h3>Remote Stream</h3>
-        <video id="remoteVideo" autoplay playsinline></video> <!-- Add this line -->
-      </div>
-
-      <div class="controls">
-        <input id="roomInput" type="text" placeholder="Enter Room ID" />
-        <button id="joinButton">Join Room</button>
-        <button id="hangupButton" disabled>Hang Up</button>
-      </div>
+        <video id="remoteVideo" autoplay playsinline></video>
+      </span>
     </div>
-
+    <input id="callInput" placeholder="Enter Call ID" />
+    <button id="answerButton">Join Call</button>
+    <button id="hangupButton" disabled>Hangup</button>
     <script type="module" src="/main.js"></script>
+    <script>
+      document.addEventListener('DOMContentLoaded', () => {
+        // Enable only 'Join Call' and 'Hangup' buttons
+        document.getElementById('answerButton').style.display = 'block';
+        document.getElementById('hangupButton').style.display = 'block';
+      });
+    </script>
   </body>
 </html>
